# velum

./: .gitignore  AGENTS.md  AUDIT_2026.md  CLAUDE.md  README.md  cellseg1_train.py  device_utils.py  mask_nms.py  predict.py  project_root.py  pyproject.toml  requirements-napari.txt  requirements.txt  run_napari.sh  run_studio.sh  set_environment.py  setup_napari.sh  visualize_cell.py
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
cellseg1_core/: advisor.py  analysis.py  channels.py  cohort.py  engine_registry.py  engines.py  engines_sam2.py  predict_controller.py  tiling.py  train_model.py  tuning_loop.py
docs/: AUDIT_2026.md  BACKLOG.md  CHANGELOG.md  README.md
docs/app_icon/: AppIcon.icns  README.md
docs/velum/: AGENT_PROMPT.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  DESIGN.md  OVERVIEW.md  PACKAGING.md  README.md  ROADMAP.md
docstudio/: AGENT_PROMPT.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  OVERVIEW.md  PACKAGING.md  README.md  ROADMAP.md
gui/: Welcome.py
gui/pages/: 1_Train.py  2_Predict.py  3_Visualize.py
gui/pages/utils/: predict_state_manager.py  train_model.py  web_utils.py
napari_app/: _npe2.py  advisor.py  analysis.py  benchmark.py  channels.py  cohort.py  engine_registry.py  engines.py  engines_sam2.py  icons.py  inference_cache.py  interactive.py  main.py  motion.py  napari.yaml  sample_data.py  theme.py  tiling.py  ui_utils.py  volume_stitch.py
napari_app/core/: __init__.py  experiment_tracking.py  predict_controller.py  train_model.py  train_state_manager.py  tuning_loop.py
napari_app/studio/: __init__.py  app.py  components.py  project.py  screens.py  theme.py  window_chrome.py
napari_app/studio/fonts/: README.md
napari_app/widgets/: annotate_widget.py  assistant_widget.py  cohort_window.py  common.py  controls.py  dashboard_window.py  guide_widget.py  log_window.py  measurements_window.py  predict_widget.py  shell.py  train_widget.py
peft/: sam_lora_image_encoder_mask_decoder.py
scripts/: build_bundle.sh  fetch_samples.py  make_app.sh
segment_anything/: automatic_mask_generator.py  automatic_mask_generator_mask_nms.py  automatic_mask_generator_opt_mask_nms.py  predictor.py
server/: __init__.py  db.py  repository.py  service.py
server/tests/: test_db.py  test_repository.py  test_service.py
studio/: __init__.py  app.py  assistant_controller.py  assistant_panel.py  canvas.py  cell_analytics.py  command_registry.py  components.py  covers.py  dashboard_controller.py  dataset.py  dataset_controller.py  dataset_export.py  dataset_screen.py  demo.py  extra_screens.py  guide_content.py  guide_screen.py  hardware.py  icons.py  image_crop.py  layer_model.py  log_bus.py  model_library.py  model_library_controller.py  model_library_screen.py  motion.py  new_project_dialog.py  overlays.py  project.py  project_controller.py  project_dialogs.py  sample_data.py  screens.py  segment_controller.py  settings_screen.py  theme.py  train_controller.py  window_chrome.py  workspace.py
studio/assets/: README.md
studio/tests/: test_app_wiring.py  test_assistant_controller.py  test_assistant_panel.py  test_canvas.py  test_cell_analytics.py  test_command_registry.py  test_components.py  test_covers.py  test_dashboard_controller.py  test_dataset.py  test_dataset_controller.py  test_dataset_export.py  test_dataset_screen.py  test_extra_screens.py  test_guide_content.py  test_guide_screen.py  test_hardware.py  test_home_wiring.py  test_image_crop.py  test_layer_model.py  test_model_library.py  test_motion.py  test_new_project_dialog.py  test_overlays.py  test_paint.py  test_project.py  test_project_controller.py  test_project_dialogs.py  test_sample_data.py  test_segment_controller.py  test_settings_screen.py  test_theme.py  test_train_controller.py  test_workspace.py
tests/: test_advisor.py  test_analysis.py  test_analysis_channels.py  test_annotate_widget_wiring.py  test_assistant_widget_wiring.py  test_benchmark.py  test_channels.py  test_cohort.py  test_dashboard_window_wiring.py  test_device_utils.py  test_engine_registry.py  test_engines_sam2.py  test_experiment_tracking.py  test_formats.py  test_inference_cache.py  test_measurements_window_wiring.py  test_packaging.py  test_predict_channels_wiring.py  test_predict_controller.py  test_predict_dtype.py  test_predict_labels_display_wiring.py  test_predict_tiled_wiring.py  test_predict_volume_wiring.py  test_predict_widget_autotune_wiring.py  test_studio_app_wiring.py  test_studio_project.py  test_studio_theme.py  test_tiling.py  test_train_model_tracking.py  test_tuning_loop.py  test_volume_stitch.py
velum_core/: advisor.py  channels.py  cohort.py  engine_registry.py  engines.py  engines_sam2.py  inference_cache.py  predict_controller.py  train_model.py  tuning_loop.py
