[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellseg1"
version = "0.1.0"
description = "Desktop napari application for cell instance segmentation in microscopy (SAM+LoRA and Cellpose-SAM engines)."
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "CellSeg1 contributors" }]
keywords = ["napari", "segmentation", "microscopy", "cell", "SAM", "LoRA", "cellpose"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Runtime dependencies for the napari desktop app. segment_anything and peft
# are vendored in this repo, so they are NOT listed here. Lower bounds are
# permissive; exact known-good pins live in requirements.txt (the lock).
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "napari>=0.5",
    "PyQt6>=6.5",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "numpy>=1.24",
    "pillow>=10.0",
    "tifffile>=2024.1.0",
    "nibabel>=5.2",
    "albumentations>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "pyqtgraph>=0.13",
    "pyyaml>=6.0",
    "cellpose>=3.0",
]

[project.optional-dependencies]
# Optional microscopy-format readers. Absent readers degrade gracefully with a
# MissingReaderError (see napari_app/channels.py); install only what you need.
formats = [
    "nd2>=0.7",
    "czifile>=2019.7.2",
    "readlif>=0.6",
]

# Optional SAM2 engine (napari_app/engines_sam2.py) for z-stack/time-lapse
# segmentation. Not installed by default: heavy (its own torch-version
# constraints, Hydra configs, GB-scale checkpoints) and the app degrades
# gracefully without it (EngineSpec.available() reports False; the Predict
# tab shows "pip install sam2" instead of crashing). Meta has not always
# published sam2 to PyPI under a stable name — if this pip name 404s, install
# from source per github.com/facebookresearch/sam2's own instructions instead.
sam2 = [
    "sam2",
]

# The pure-logic test suite (analysis/benchmark/cohort/advisor/tiling/formats)
# must run WITHOUT torch or napari, so CI installs only this group. Kept in a
# PEP 735 dependency-group (not an extra) so `pip install --group test` pulls
# these deps alone, without the heavy runtime dependencies above.
[dependency-groups]
test = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "nibabel",
    "pytest",
]
dev = [
    { include-group = "test" },
    "build",
    "npe2",
]

[project.scripts]
# Console launcher: `cellseg1` starts the desktop app (same as run_napari.sh).
cellseg1 = "napari_app.main:main"

[project.entry-points."napari.manifest"]
# napari plugin discovery: exposes the Predict dock widget under Plugins ▸ CellSeg1.
cellseg1 = "napari_app:napari.yaml"

[tool.setuptools]
# Flat layout: a handful of top-level ML-core modules live beside the packages.
py-modules = [
    "predict",
    "cellseg1_train",
    "metrics",
    "mask_nms",
    "sampler",
    "cell_loss",
    "set_environment",
    "gpu_memory_tracker",
    "project_root",
]

[tool.setuptools.packages.find]
# namespaces=true so peft/ and data/ (no __init__.py) are packaged too.
include = ["napari_app*", "segment_anything*", "peft*", "data*"]
namespaces = true

[tool.setuptools.package-data]
napari_app = ["napari.yaml"]
