[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellseg1"
version = "0.1.0"
description = "Desktop napari application for cell instance segmentation in microscopy (SAM+LoRA and Cellpose-SAM engines)."
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "CellSeg1 contributors" }]
keywords = ["napari", "segmentation", "microscopy", "cell", "SAM", "LoRA", "cellpose"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Runtime dependencies for the napari desktop app. segment_anything and peft
# are vendored in this repo, so they are NOT listed here. Lower bounds are
# permissive; exact known-good pins live in requirements.txt (the lock).
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "napari>=0.5",
    "PyQt6>=6.5",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "numpy>=1.24",
    "pillow>=10.0",
    "tifffile>=2024.1.0",
    "nibabel>=5.2",
    "albumentations>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "pyqtgraph>=0.13",
    "pyyaml>=6.0",
    "cellpose>=3.0",
]

[project.optional-dependencies]
# Optional microscopy-format readers. Absent readers degrade gracefully with a
# MissingReaderError (see napari_app/channels.py); install only what you need.
formats = [
    "nd2>=0.7",
    "czifile>=2019.7.2",
    "readlif>=0.6",
]

# Optional SAM2 engine (napari_app/engines_sam2.py) for z-stack/time-lapse
# segmentation. Not installed by default: heavy (its own torch-version
# constraints, Hydra configs, GB-scale checkpoints) and the app degrades
# gracefully without it (EngineSpec.available() reports False; the Predict
# tab shows "pip install sam2" instead of crashing). Meta has not always
# published sam2 to PyPI under a stable name — if this pip name 404s, install
# from source per github.com/facebookresearch/sam2's own instructions instead.
sam2 = [
    "sam2",
]

# Optional experiment tracking (napari_app/core/experiment_tracking.py):
# logs predict/train/auto-tune runs to a local Aim (aimstack.io) repo instead
# of only this app's own custom charts. Fully local/self-hosted — nothing is
# sent anywhere — and degrades gracefully without it (every tracking call is
# a guarded no-op; "Dashboard" buttons show a "pip install aim" hint).
tracking = [
    "aim",
]

# Optional embedded dashboard view (napari_app/widgets/dashboard_window.py):
# shows Aim's own web UI inside a floating window via QWebEngineView instead
# of only opening it in the system browser. Bundles a Chromium-based engine
# (a real size/complexity cost for a desktop app) — kept separate from
# `tracking` above so installing Aim itself stays light; the "Open in
# browser" action always works even without this extra.
tracking-ui = [
    "PyQt6-WebEngine",
]

# The pure-logic test suite (analysis/benchmark/cohort/advisor/tiling/formats)
# must run WITHOUT torch or napari, so CI installs only this group. Kept in a
# PEP 735 dependency-group (not an extra) so `pip install --group test` pulls
# these deps alone, without the heavy runtime dependencies above. matplotlib
# is listed explicitly (not just implied by scikit-image) because it's only
# an *optional* extra of scikit-image/scipy/nibabel — the same class of gap
# that bit nibabel itself before it was added here directly: analysis.py's
# colour-by-measurement path needs a real colormap, which no other package
# in this group pulls in transitively.
[dependency-groups]
test = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "nibabel",
    "matplotlib",
    "pytest",
]
dev = [
    { include-group = "test" },
    "build",
    "npe2",
]

[project.scripts]
# Console launcher: `cellseg1` starts the classic napari-plugin app (== run_napari.sh).
cellseg1 = "napari_app.main:main"
# `cellseg1-studio` starts the standalone Studio desktop app (== run_studio.sh).
# Additive and opt-in; the classic entry point above is unchanged.
cellseg1-studio = "napari_app.studio.app:main"

[project.entry-points."napari.manifest"]
# napari plugin discovery: exposes the Predict dock widget under Plugins ▸ CellSeg1.
cellseg1 = "napari_app:napari.yaml"

[tool.setuptools]
# Flat layout: a handful of top-level ML-core modules live beside the packages.
py-modules = [
    "predict",
    "cellseg1_train",
    "metrics",
    "mask_nms",
    "sampler",
    "cell_loss",
    "set_environment",
    "gpu_memory_tracker",
    "project_root",
]

[tool.setuptools.packages.find]
# namespaces=true so peft/ and data/ (no __init__.py) are packaged too.
include = ["napari_app*", "segment_anything*", "peft*", "data*"]
namespaces = true

[tool.setuptools.package-data]
napari_app = ["napari.yaml"]
# Studio bundles the Figtree UI typeface (SIL OFL) — ship the font files.
"napari_app.studio" = ["fonts/*.ttf", "fonts/*.md"]
