[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellseg1"
version = "0.1.0"
description = "Velum — a desktop app for cell instance segmentation in microscopy (SAM+LoRA and Cellpose-SAM engines)."
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "CellSeg1 contributors" }]
keywords = ["segmentation", "microscopy", "cell", "SAM", "LoRA", "cellpose"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Runtime dependencies for the Studio desktop app. segment_anything and peft
# are vendored in this repo, so they are NOT listed here. Lower bounds are
# permissive; exact known-good pins live in requirements.txt (the lock).
# NOTE: napari itself is no longer a dependency — Studio has its own Qt canvas
# and layer model (studio/canvas.py, studio/layer_model.py) and imports nothing
# from napari. The ML core lives in velum_core/ (engine-agnostic, Qt-free).
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "PyQt6>=6.5",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "numpy>=1.24",
    "pillow>=10.0",
    "tifffile>=2024.1.0",
    "nibabel>=5.2",
    "albumentations>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "pyqtgraph>=0.13",
    "pyyaml>=6.0",
    "cellpose>=3.0",
]

[project.optional-dependencies]
# Optional microscopy-format readers. Absent readers degrade gracefully with a
# MissingReaderError (see velum_core/channels.py); install only what you need.
formats = [
    "nd2>=0.7",
    "czifile>=2019.7.2",
    "readlif>=0.6",
]

# Optional SAM2 engine (velum_core/engines_sam2.py) for z-stack/time-lapse
# segmentation. Not installed by default: heavy (its own torch-version
# constraints, Hydra configs, GB-scale checkpoints) and the app degrades
# gracefully without it (EngineSpec.available() reports False; the Predict
# tab shows "pip install sam2" instead of crashing). Meta has not always
# published sam2 to PyPI under a stable name — if this pip name 404s, install
# from source per github.com/facebookresearch/sam2's own instructions instead.
sam2 = [
    "sam2",
]

# Optional experiment tracking (velum_core/experiment_tracking.py):
# logs predict/train/auto-tune runs to a local Aim (aimstack.io) repo instead
# of only this app's own custom charts. Fully local/self-hosted — nothing is
# sent anywhere — and degrades gracefully without it (every tracking call is
# a guarded no-op; "Dashboard" buttons show a "pip install aim" hint).
tracking = [
    "aim",
]

# Optional embedded dashboard view (the Dashboard screen):
# shows Aim's own web UI inside a floating window via QWebEngineView instead
# of only opening it in the system browser. Bundles a Chromium-based engine
# (a real size/complexity cost for a desktop app) — kept separate from
# `tracking` above so installing Aim itself stays light; the "Open in
# browser" action always works even without this extra.
tracking-ui = [
    "PyQt6-WebEngine",
]

# The pure-logic test suite (analysis/benchmark/cohort/advisor/tiling/formats)
# must run WITHOUT torch or napari, so CI installs only this group. Kept in a
# PEP 735 dependency-group (not an extra) so `pip install --group test` pulls
# these deps alone, without the heavy runtime dependencies above. matplotlib
# is listed explicitly (not just implied by scikit-image) because it's only
# an *optional* extra of scikit-image/scipy/nibabel — the same class of gap
# that bit nibabel itself before it was added here directly: analysis.py's
# colour-by-measurement path needs a real colormap, which no other package
# in this group pulls in transitively.
[dependency-groups]
test = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "nibabel",
    "matplotlib",
    "pytest",
]
dev = [
    { include-group = "test" },
    "build",
]

[project.scripts]
# Console launchers: all start the Velum desktop app (== run_studio.sh).
# `velum` is the primary name; `cellseg1`/`cellseg1-studio` stay as aliases.
velum = "studio.app:main"
cellseg1 = "studio.app:main"
cellseg1-studio = "studio.app:main"

[tool.setuptools]
# Flat layout: a handful of top-level ML-core modules live beside the packages.
py-modules = [
    "predict",
    "cellseg1_train",
    "metrics",
    "mask_nms",
    "sampler",
    "cell_loss",
    "set_environment",
    "gpu_memory_tracker",
    "project_root",
]

[tool.setuptools.packages.find]
# namespaces=true so peft/ and data/ (no __init__.py) are packaged too.
# `studio*` is the standalone app package; `server*` is the multi-user backend
# foundation (accounts/DB/RBAC — stdlib only, no runtime deps). Both are
# siblings of the classic app; their test suites are excluded from the wheel.
include = ["studio*", "velum_core*", "server*", "segment_anything*", "peft*", "data*"]
exclude = ["studio.tests*", "server.tests*"]
namespaces = true

[tool.setuptools.package-data]
# Studio bundles the Figtree UI typeface (SIL OFL) — ship the font files, and
# the app icon.
studio = ["fonts/*.ttf", "fonts/*.md", "assets/*.png"]
